[package]
name = "f"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
rustyline = { version = "10.1.1", default-features = false }
lasso = "0.7.2"

[profile.release]
# lto = "fat"
